force-app/main/default/objects/nFORCE__Layout__c/fields/nFORCE__Category__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Category__c</fullName>
    <description>Use this multi-select picklist field to indicate which Group categories can be assigned this layout.</description>
    <inlineHelpText>Indicate which Group categories can be assigned this layout.</inlineHelpText>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Dashboard</fullName>
            </value>
            <value>
                <fullName>Online Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>