force-app/main/default/objects/nFORCE__Layout__c/fields/nFORCE__Generator_Class__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Generator_Class__c</fullName>
    <description>If selected, the final risk grade will be a round number. If deselected, the final risk grade will be a decimal number.</description>
    <label>Generator Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>