force-app/main/default/objects/nFORCE__Layout__c/fields/nFORCE__Visualforce_Page__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Visualforce_Page__c</fullName>
    <description>Use this text field to enter the fully qualified (includes namespace if applicable) Visualforce page that implements the layout.</description>
    <inlineHelpText>Enter the name of the Visualforce page (including namespace if applicable) that implements the layout.</inlineHelpText>
    <label>Visualforce Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>